# photocaml

./: .cursorignore  .env example  .env.example  .gitignore  CLAUDE.md  Dockerfile  Plan.MD  README.md  db.sqlite  db.sqlite-journal  docker-compose.yml  dune  dune-project  entrypoint.sh  init_db.ml  init_db.sh  photocaml.opam  plan.md  start_server.sh  stop_server.sh
.cursor/rules/: coding-guideline.mdc
.github/workflows/: build.yml
cli/: dune  main.ml
docs/: README.md
lib/: database.ml  dune  photocaml.ml  photocaml.mli  scanner.ml
lib/database/: database.ml  db.ml  dune  s3.ml  schema.pg.sql  schema.sql
scripts/: setup_dev.sh  test-s3.sh
scripts/db/: dune  init_pg.ml  init_pg.sh
test/: dune  simple.ml  working.ml
